# atinypgtool

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: pypi.yaml  pypi.yml
atinypgtool/: __init__.py  core.py  sql.py  utils.py
